[project]
name = "scope-beat-sync"
version = "0.1.0"
description = "Beat-locked frame buffer for VJ latency compensation in Daydream Scope"
requires-python = ">=3.12"

[project.entry-points."scope"]
scope_beat_sync = "scope_beat_sync"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scope_beat_sync"]
